--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-hook-form": "^4.7.0",
+    "react-owl-carousel": "^2.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-router-named-routes": "^0.0.23",
